# JPEG-Compression

./: CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.cbp  Jiroveanu_Stefan.cpp  Makefile  cmake_install.cmake  compressed.txt
.cmake/api/v1/reply/: cache-v2-d7dd5b81472793101104.json  cmakeFiles-v1-e20d225ffbaa42ed2e74.json  codemodel-v2-8b1be8d974bc2116f03e.json  index-2023-05-28T19-55-10-0623.json  target-DisplayImage-Debug-634be466d280bd56425d.json
